added youtube links to portfolio detail page

--- a/src/assets/scss/_portfolio.scss
+++ b/src/assets/scss/_portfolio.scss
@@ -231,6 +231,11 @@
   }
 }
 
+.youtube-video {
+  aspect-ratio: 16 / 9;
+  width: 100%;
+}
+
 /*-- portfolios Details Content --*/
 .portfolio-details-content {
   padding-left: 30px;
