added portfolio data

--- a/src/assets/scss/_about.scss
+++ b/src/assets/scss/_about.scss
@@ -3,7 +3,7 @@
 /*----------------------------------------*/
 
 /*-- About Image --*/
-.about-image {
+.about-thumbnail {
     & img {
         width: 100%;
     }
