--- a/src/assets/scss/_contact.scss
+++ b/src/assets/scss/_contact.scss
@@ -83,6 +83,7 @@
         line-height: 1;
         font-weight: 600;
         text-transform: uppercase;
+        margin-top: 15px;
         margin-bottom: 15px;
     
         // Responsive
